--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.0.2",
     "express": "^4.18.2",
     "luxon": "^3.4.4",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
