--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "luxon": "^3.4.4",
     "primeicons": "^7.0.0",
