--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "luxon": "^3.4.4",
+    "openmeteo": "^1.1.4",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
