--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "chart.js": "^4.4.3",
+    "chroma-js": "^2.4.2",
     "express": "^4.18.2",
     "luxon": "^3.4.4",
     "openmeteo": "^1.1.4",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/chroma-js": "^2.4.4",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.4.2",
